# moviedb-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.yml  AGENTS.md  Dockerfile  README.md  commitlint.config.cjs  config.yml  dev.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  filemanagement.py  main.ini  main.py  package-lock.json  package.json  process.py  pyproject.toml  requirements.txt  test.py  wsgi.py
.github/workflows/: ci-build-image.yml  commitlint.yml  docker-publish.yml  pre-commit.yml  release-draft.yml  semantic-release.yml
alembic/: env.py
alembic/versions/: 8020591fca1a_initial_schema.py
frontend/: Dockerfile.dev  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
moviedb_manager/: app.py  config.py  filemanagement.py
moviedb_manager/api/: protocols.py  tmdb.py  tvdb.py
moviedb_manager/config/: settings.py
moviedb_manager/db/: __init__.py  engine.py  models.py
moviedb_manager/models/: media.py
moviedb_manager/services/: fileops.py  metadata.py  naming.py  pipeline.py  torrent.py
moviedb_manager/templates/: index.html
nginx/: nginx.conf.dev
templates/: index.html
tests/: conftest.py  test_api_adapters.py  test_api_endpoints.py  test_api_protocols.py  test_app.py  test_auth.py  test_config.py  test_fileops.py  test_full_stack_pipeline.py  test_metadata.py  test_naming.py  test_pipeline.py  test_torrent.py
