[project]
dependencies = [
    "fastapi~=0.135.1",
    "uvicorn~=0.42.0",
    "qbittorrent-api~=2025.11.1",
    "pyyaml~=6.0.3",
    "tmdbv3api~=1.9.0",
    "tvdb-v4-official~=1.1.0",
    "redis~=7.4.0",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.13.1",
    "sqlalchemy[asyncio]~=2.0.48",
    "asyncpg~=0.31.0",
    "alembic~=1.18.4",
    "sse-starlette~=3.3.3",
    "PyJWT[cryptography]~=2.12.1",
]
name = "moviedb-manager"
dynamic = ["version", "readme"]
description = "A repository for managing movie downloads with automatic file renaming."
license = { file = "LICENSE.md" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: Other/Proprietary License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = "~=3.11"

[[project.authors]]
name = "Anton Lu"
email = "anton.lu@cern.ch"

[project.urls]
homepage = "https://github.com/antolu/moviedb-manager"
repository = "https://github.com/antolu/moviedb-manager"

[project.optional-dependencies]
test = ["pytest~=9.0.2", "pytest-cov~=7.1.0", "pytest-asyncio~=1.3.0", "httpx~=0.28.1"]
dev = ["pre-commit~=4.5.1", "ruff~=0.15.7", "mypy~=1.20.0", "types-redis"]

[build-system]
requires = ["setuptools >= 61", "setuptools-scm[toml] ~= 10.0", "wheel"]
build-backend = "setuptools.build_meta"

# keep this for dynamic versioning
[tool.setuptools_scm]
write_to = "moviedb_manager/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["."]
include = ["moviedb_manager*"]
namespaces = false

[tool.setuptools.package-data]
moviedb_manager = ["py.typed"]

[project.scripts]
moviedb-manager = "moviedb_manager.app:main"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  ".venv",
  "moviedb_manager/_version.py",
]

line-length = 88         # black and ruff default
target-version = "py314"
preview = true

[tool.ruff.lint]
# All rules can be found here: https://docs.astral.sh/ruff/rules/
select = [
  "F",   # pyflakes
  "E",   # error  (pycodestyle)
  "W",   # warning (pycodestyle)
  "I",   # isort
  "I001", # isort
  "N",   # naming  (pep8)
  "UP",  # pyupgrade
  "PLC", # convention  (pylint)
  "PLE", # error  (pylint)
  "PLW", # warning  (pylint)
  "PLR", # refactor  (pylint)
  "PERF",   # perflint
  "RUF",    # ruff
  "B",
  "C4",
  "FBT",
  "A",
  "EM",
  "ISC",
  "FA",
  "G",
  "PIE",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
]
fixable = ["ALL"]
ignore = ["E501", "W505", "ISC001", "PLW2901", "N812", "N806", "G004", "PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
preview = true

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Add overrides if needed for specific libraries without type stubs
module = ["tmdbv3api.*", "tvdb_v4_official.*", "qbittorrentapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "real_auth: requires a live auth broker, skipped in CI",
    "no_auth_override: bypass the autouse auth stub without needing a real broker",
]
